--- a/Templates/Designs/TTonlineNew/New_Homepage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_Homepage.cshtml
@@ -78,8 +78,9 @@
 	<div class="modal bd-example-modal-sm" id="NewsletterSignUp" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true">
       <div class="modal-dialog modal-sm">
           <div class="modal-content" >
-            <button type="button" class="btn btn-primary float-right exit-modal" data-dismiss="modal">X</button>
-            @RenderParagraphContent(164)
+            <button type="button" class="btn btn-primary exit-modal" data-dismiss="modal">X</button>
+            @RenderParagraphContent(164) 
+			@* RenderParagraphContent(3233) *@
           </div>
           <div class="modal-footer">                            
           </div>
