--- a/Templates/Designs/TTonlineNew/css/custom.less
+++ b/Templates/Designs/TTonlineNew/css/custom.less
@@ -21326,6 +21326,9 @@ body.dark-skin,
 	overflow: auto;
 	float: none;
 }
+#NewsletterSignUp #success-message {
+  margin-left: 1em;
+}
 
 .signUpNewsletter-link {
 	color: #fff;
