--- a/Templates/Designs/TTonlineNew/dist2/app.bundle.css
+++ b/Templates/Designs/TTonlineNew/dist2/app.bundle.css
@@ -18475,6 +18475,9 @@ body.dark-skin,
   overflow: auto;
   float: none;
 }
+#NewsletterSignUp #success-message {
+  margin-left: 1em;
+}
 .signUpNewsletter-link {
   color: #fff;
   margin: 0 0 0 1em;
