--- a/Templates/Designs/TTonlineNew/css/custom.less
+++ b/Templates/Designs/TTonlineNew/css/custom.less
@@ -21295,6 +21295,9 @@ body.dark-skin,
 	margin-bottom: 15px;
 }
 /* abonare newsletter */
+.popUpHide {
+	display: none !important;
+}
 .first-step, .second-step {
   display: none;
 }
