--- a/Templates/Designs/TTonlineNew/dist2/app.bundle.css
+++ b/Templates/Designs/TTonlineNew/dist2/app.bundle.css
@@ -18442,6 +18442,9 @@ body.dark-skin,
   margin-bottom: 15px;
 }
 /* abonare newsletter */
+.popUpHide {
+  display: none !important;
+}
 .first-step,
 .second-step {
   display: none;
