--- a/Templates/Designs/TTonlineNew/Paragraph/SignUpNewsletter.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/SignUpNewsletter.cshtml
@@ -34,8 +34,8 @@
     <div></div>
   <div id="sib-container" class="sib-container--large sib-container--vertical">
     <form id="sib-form" method="POST" action="https://5ff28567.sibforms.com/serve/MUIEAAqvrc8mGrdv7qVlIAyS4zdcVsAQEwLEqepy4bjovBaoXLELTt1fJu06k5_0jN5arn4L_vD9k2LKlPTNLXx1dnE41Yur7d-m3er9BlKqmOt-wqT_O2mxNBZeHDZ6xXNSDim7uR8-OO6NKdSruWLouYyQF7FR_tzx-6crCV_eoV1qaFePXFysS_yEwKnHaH4CO8zJaE6wCbYG" data-type="subscription">
-      	<input class="input" maxlength="200" type="hidden" id="LASTNAME" name="LASTNAME" autocomplete="off" placeholder="NUME" data-required="true" value="LASTNAME" />
-		<input class="input" maxlength="200" type="hidden" id="FIRMA" name="FIRMA" autocomplete="off" placeholder="COMPANIE" data-required="true" value="FIRMA" />
+      	<input class="input" maxlength="200" type="hidden" id="LASTNAME" name="LASTNAME" autocomplete="off" placeholder="NUME" data-required="false" value=" " />
+		<input class="input" maxlength="200" type="hidden" id="FIRMA" name="FIRMA" autocomplete="off" placeholder="COMPANIE" data-required="false" value=" " /> 
 
         <div class="first-step open">
 			
