--- a/Templates/Designs/TTonlineNew/css/custom.less
+++ b/Templates/Designs/TTonlineNew/css/custom.less
@@ -21335,11 +21335,26 @@ body.dark-skin,
 
 .signUpNewsletter-link {
 	color: #fff;
-	margin: 0 0 0 1em;
 	
 	&:hover {
 		color: #fbaf29;
 		text-decoration: underline;
+	}
+}
+.header-first-row .social-icon {
+	display: flex;
+	align-items: center;
+	grid-gap: 1em;
+	top: 17px;
+}
+.footer-block {
+	.signUpNewsletter-link {
+		margin: 0;
+		text-decoration: underline !important; 
+
+		&:hover {
+			text-decoration: none !important;
+		}
 	}
 }
 .sib-form {
